--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "JSON Copier",
   "version": "1.0",
   "description": "Copies a JSON file from a network request.",
   "permissions": ["<all_urls>"],
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": ["background.js"]
   }
 }
